<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSecondary"
    tools:context=".QuizFragment">

    <TextView
        android:id="@+id/quiz_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/quiz_title_default"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quiz_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/ques_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/quiz_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_title" />

    <TextView
        android:id="@+id/quiz_question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/ques_no_default"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColorPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/quiz_question_text"
        app:layout_constraintStart_toStartOf="@+id/quiz_question_text"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question_text" />

    <ProgressBar
        android:id="@+id/quiz_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:indeterminate="false"
        android:indeterminateTint="@color/colorPrimary"
        android:progress="100"
        android:progressDrawable="@drawable/circular_progress"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_question_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quiz_question_text"
        app:layout_constraintTop_toTopOf="@+id/quiz_question_text"/>

    <TextView
        android:id="@+id/quiz_progress_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:text="@string/timer_default"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_progress"
        app:layout_constraintEnd_toEndOf="@+id/quiz_progress"
        app:layout_constraintStart_toStartOf="@+id/quiz_progress"
        app:layout_constraintTop_toTopOf="@+id/quiz_progress" />

    <TextView
        android:id="@+id/quiz_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/question_default"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question_number" />

    <TextView
        android:id="@+id/quiz_option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/option_bg"
        android:enabled="false"
        android:fontFamily="@font/quicksand"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/option1_default"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColorSecondary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/quiz_option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/option_bg"
        android:enabled="false"
        android:fontFamily="@font/quicksand"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/option2_default"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColorSecondary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_option1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/quiz_option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/option_bg"
        android:enabled="false"
        android:fontFamily="@font/quicksand"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/option3_default"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColorSecondary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_option2"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/quiz_option4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/option_bg"
        android:enabled="false"
        android:fontFamily="@font/quicksand"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/option4_default"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColorSecondary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_option3"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/quiz_feedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/quiz_feedback_default"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_option4"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/quiz_next_question_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/quiz_next_question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/next_question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/quiz_next_ques_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>